--- a/stylesheets/components/main-nav.css
+++ b/stylesheets/components/main-nav.css
@@ -1,1 +1,13 @@
-/* Your code here */
+
+.main>ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
+.main>ul>li {
+    font-size: 12px;
+    margin: 5px;
+}
+
